--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "rootDir": ".",
+    "rootDir": "./src",
     "outDir": "./dist",
     "noEmit": false,
     "allowImportingTsExtensions": false,
     "composite": false,
     "incremental": false
   },
-  "include": ["src/**/*" ],
-  "exclude": ["microservice-template"]
+  "include": ["src/**/*" ]
 }
