--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "@hookform/resolvers": "5.2.1",
     "@neo/ui": "workspace:*",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
