--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-slot": "^1.2.3"
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "19.1.9",
