chore: update .gitignore to ignore dist, build, cache and env files - Added rules to ignore all dist folders, build caches, and environment files - Ensures .env.example remains tracked - Cleans up unnecessary files from repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
-node_modules/
-.next
-dist/
-logs/
-buildcache/
+# Zależności
+**/node_modules/
 
+# Foldery build i cache
+.next/
+**/dist/
+**/logs/
+**/buildcache/
+**/out/
 
-
-out/
+# Pliki środowiskowe
 .env
 .env.local
+*.env*
