add before change tsconfig

--- a/apps/gateway/tsconfig.json
+++ b/apps/gateway/tsconfig.json
@@ -9,6 +9,11 @@
     "composite": false,
     "incremental": false,
     "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./*"],
+      "@/config/*": ["./src/config/*"],
+      "@/utils/*": ["./src/utils/*"]
+    }
   },
   "include": ["src/**/*"]
 }
