--- a/apps/gateway/tsconfig.prod.json
+++ b/apps/gateway/tsconfig.prod.json
@@ -10,6 +10,11 @@
     "sourceMap": false,
     "declaration": false,
     "removeComments": true,
+    "paths": {
+      "@/*": ["./*"],
+      "@/config/*": ["./src/config/*"],
+      "@/utils/*": ["./src/utils/*"]
+    }
   },
   "include": ["src/**/*"]
 }
