--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -23,7 +23,10 @@
   "devDependencies": {
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
-    "tsup": "^8.5.0"
+    "@types/express": "^5.0.3",
+    "@types/node": "24.2.1",
+    "tsup": "^8.5.0",
+    "typescript": "5.9.2"
   },
   "dependencies": {
     "compression": "^1.8.1",
