fix(build): adjust TypeScript configs, add path mapping, and fix common package build
- Updated tsconfig.base.json and tsconfig.build.json to ensure proper outDir, rootDir, and NodeNext compatibility
- Added tsconfig.paths.json for centralized TypeScript path aliases
- Fixed import extensions from `.ts` to `.js` for build output compatibility
- Updated @neo/common package.json:
  - Added proper exports for ESM
  - Added build script using tsup for generating dist output
- Ensured build scripts clean dist before compiling

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -6,8 +6,7 @@
   "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsup",
-    "tsx": "tsc --emitDeclarationOnly && tsup src/index.ts --format esm,cjs",
+    "build": "sh scripts/build-prod.sh",
     "tsc": "tsc",
     "tsup": "tsup src/index.ts --dts --dts-resolve --format esm,cjs",
     "dev": "tsup src/index.ts --dts --dts-resolve --format esm,cjs --watch"
@@ -19,6 +18,9 @@
       "require": "./dist/index.cjs",
       "default": "./dist/index.js"
     }
+  },
+  "peerDependencies": {
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/compression": "^1.8.1",
