--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:prod": "sh scripts/build-prod.sh",
     "start:prod": "node dist/index.js",
-    "start:dev": "sh scripts/dev.sh",
+    "start:dev": "sh scripts/start-dev.sh",
     "lint:dev": "eslint ./src --ext .ts",
     "lint:debug": "eslint ./src --ext .ts --debug"
   },
