--- a/apps/gateway/tsconfig.json
+++ b/apps/gateway/tsconfig.json
@@ -1,19 +1,13 @@
-// Gateway - dev
+// Gateway - tsconfig.json
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": ["../../tsconfig.base.json", "../../tsconfig.paths.json"],
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "./dist",
-    "noEmit": true,
-    "allowImportingTsExtensions": true,
-    "composite": false,
-    "incremental": false,
     "baseUrl": "./src",
-    "paths": {
-      "@/*": ["./*"],
-      "@/config/*": ["./src/config/*"],
-      "@/utils/*": ["./src/utils/*"]
-    }
+    "outDir": "dist",
+    "noEmit": true,
+    "sourceMap": true,
+    "allowImportingTsExtensions": true,
   },
   "include": ["src/**/*"]
 }
