--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:prod": "tsc --project tsconfig.prod.json && tsc-alias -p tsconfig.prod.json",
+    "build:prod": " sh scripts/build-prod.sh",
     "start:prod": "node dist/index.js",
     "start:dev": "sh scripts/dev.sh"
   },
