--- a/services/auth-service/tsconfig.build.json
+++ b/services/auth-service/tsconfig.build.json
@@ -1,16 +1,14 @@
 // Auth-service - prod
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "rootDir": "src",
+    "rootDir": "./src",
     "outDir": "dist",
     "noEmit": false,
-    "composite": false,
-    "incremental": false,
-    "sourceMap": false,
     "declaration": false,
+    "allowImportingTsExtensions": false,
+    "sourceMap": false,    
     "removeComments": true,
-    "baseUrl": "./src",
   },
   "include": ["src/**/*"]
 }
