--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsup",
+    "build:prod": "tsup",
     "dev": "tsup src/index.ts --dts --format esm,cjs --watch"
   },
   "peerDependencies": {
