--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Build UI package
         working-directory: packages/ui
-        run: pnpm run build
+        run: pnpm run build:prod
 
       - name: Build with Next.js
         working-directory: apps/web # <--- Kluczowe: buduj w katalogu aplikacji
