--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
+    "@zerodayz7/common": "^1.0.1",
     "connect-redis": "^9.0.0",
     "dotenv": "^17.2.1",
     "envalid": "^8.1.0",
