--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zerodayz7/ui",
+  "name": "@neo/ui",
   "version": "1.0.0",
   "main": "dist/index.js",
   "module": "dist/index.js",
