--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,31 +1,21 @@
-# Sample workflow for building and deploying a Next.js site to GitHub Pages
-#
-# To get started with Next.js see: https://nextjs.org/docs/getting-started
-#
 name: Deploy Next.js site to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches:
+      - main
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
-# 123
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     env:
@@ -42,45 +32,40 @@ jobs:
         uses: actions/configure-pages@v5
         with:
           static_site_generator: next
-      - name: Restore cache
+
+      - name: Restore Next.js cache
         uses: actions/cache@v4
         with:
-          path: |
-            apps/web/.next/cache # <--- Dostosowana ścieżka do cache
-          # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }} # <--- Dostosowano do pnpm
-          # If source files changed but packages didn't, rebuild from a prior cache.
-          restore-keys: |
-             ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}- # <--- Dostosowano do pnpm
-
-      - name: Install dependencies
-        working-directory: apps/web # <--- Kluczowe: pracuj w katalogu aplikacji
+          path: apps/web/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('apps/web/**/*.{js,ts,jsx,tsx}') }}
+          restore-keys: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
+      - name: Install web dependencies
+        working-directory: apps/web
         run: pnpm install --no-frozen-lockfile --filter ./apps/web...
 
-
-      - name: Build UI package
+      - name: Install and build UI package
         working-directory: packages/ui
-        run: pnpm install --no-frozen-lockfile --filter ./packages/ui...
-        run: pnpm run build:prod
+        run: |
+          pnpm install --no-frozen-lockfile --filter ./packages/ui...
+          pnpm run build:prod
 
-      - name: Build with Next.js
-        working-directory: apps/web # <--- Kluczowe: buduj w katalogu aplikacji
+      - name: Build Next.js site
+        working-directory: apps/web
         env:
           NEXT_PUBLIC_GITHUB_PAGES: true
-        run: pnpm run build # Używamy pnpm run build
+        run: pnpm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./apps/web/out # <--- Kluczowe: ścieżka do wygenerowanych plików statycznych
+          path: ./apps/web/out
 
-  # Deployment job
   deploy:
+    runs-on: ubuntu-latest
+    needs: build
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
