--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -42,12 +42,11 @@ jobs:
 
       - name: Install web dependencies
         working-directory: apps/web
-        run: pnpm install --no-frozen-lockfile --filter ./apps/web...
+        run: pnpm install --no-frozen-lockfile
 
       - name: Install and build UI package
         working-directory: packages/ui
         run: |
-          pnpm install --no-frozen-lockfile --filter ./packages/ui...
           pnpm run build:prod
 
       - name: Build Next.js site
