Add new CLI templates to microservices

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -8,5 +8,6 @@
     "composite": false,
     "incremental": false
   },
-  "include": ["src/**/*" ]
+  "include": ["src/**/*" ],
+  "exclude": ["microservice-template"]
 }
