fix: remove cyclic export in COMMON_CONFIG and clean up index exports
- Removed redundant `export { COMMON_CONFIG } from './config/env.ts'` in env.ts
- Updated index.ts to only re-export named exports without .ts extensions
- Ensures DTS build passes and avoids cyclic import issues

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -24,7 +24,8 @@
     }
   },
   "peerDependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "envalid": "^8.1.0"
   },
   "devDependencies": {
     "@types/compression": "^1.8.1",
