--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -16,6 +16,7 @@
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
     "@zerodayz7/common": "workspace:*",
+    "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "envalid": "^8.1.0",
     "express": "^5.1.0",
