--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -8,13 +8,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:prod": " sh scripts/build-prod.sh",
     "start:prod": "node dist/index.js",
-    "start:dev": "sh scripts/dev.sh"
+    "start:dev": "sh scripts/start-dev.sh"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
+    "@zerodayz7/common": "workspace:*",
+    "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "envalid": "^8.1.0",
     "express": "^5.1.0",
