--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -24,8 +24,8 @@
     }
   },
   "peerDependencies": {
-    "express": "^5.1.0",
-    "envalid": "^8.1.0"
+    "envalid": "^8.1.0",
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/compression": "^1.8.1",
@@ -40,6 +40,7 @@
     "cors": "^2.8.5",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
+    "prom-client": "^15.1.3",
     "rate-limiter-flexible": "^7.2.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
