--- a/docker/docker-compose.gateway.yml
+++ b/docker/docker-compose.gateway.yml
@@ -4,12 +4,10 @@ services:
       context: ../..  # root folder (czyli project-root)
       dockerfile: ./project-root/apps/gateway/Dockerfile
     container_name: gateway
-    restart: unless-stopped
     ports:
       - "4000:4000"
     volumes:
       - ../apps/gateway:/usr/src/app
-      - /usr/src/app/node_modules
     environment:
       - NODE_ENV=development
       - REDIS_URL=redis://redis:6379
@@ -21,7 +19,7 @@ services:
     #   - auth-db
     networks:
       - shared
-    command: pnpm run dev
+    command: pnpm run start:dev
 
 networks:
   shared:
