--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "web": "pnpm --filter web run turbo",
-    "gate": "pnpm --filter gateway run nodemon",
-    "auth": "pnpm --filter auth-service run nodemon",
+    "gate": "pnpm --filter gateway run start:dev",
+    "auth": "pnpm --filter auth-service run start:dev",
     "start-all": "sh scripts/start-all.sh",
     "update-all": "pnpm update --latest --recursive",
     "update-all-npx": "pnpm dlx npm-check-updates -u",
+    "update-check": "pnpm dlx npm-check-updates",
     "pnpm:clear": "sh scripts/clear-pnpm.sh",
     "pnpm:clearlogs": "sh scripts/clear-logs.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
