--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "rootDir": "./src",
+    // "rootDir": "./src",
+    "baseUrl": "./src",
     "outDir": "./dist",
     "declaration": true,
     "emitDeclarationOnly": true,
