--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -20,6 +20,7 @@
       "@/lib/*": ["./lib/*"],
       "@/services/*": ["./services/*"],
       "@/utils/*": ["./utils/*"],
+      "@/types/*": ["./types/*"],
     },
     "plugins": [
       {
