--- a/docker/docker-compose.gateway.yml
+++ b/docker/docker-compose.gateway.yml
@@ -8,6 +8,7 @@ services:
       - "4000:4000"
     volumes:
       - ../apps/gateway:/usr/src/app
+      - /usr/src/app/node_modules
     environment:
       - NODE_ENV=development
       - REDIS_URL=redis://redis:6379
@@ -19,7 +20,7 @@ services:
     #   - auth-db
     networks:
       - shared
-    command: pnpm run start:dev
+    command: pnpm run nodemon
 
 networks:
   shared:
