--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -44,6 +44,7 @@
     "rate-limiter-flexible": "^7.2.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^4.0.17"
   }
 }
