--- a/apps/gateway/tsconfig.build.json
+++ b/apps/gateway/tsconfig.build.json
@@ -2,7 +2,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "rootDir": "./src",
+    "rootDir": ".",
     "outDir": "dist",
     "noEmit": false,
     "declaration": false,
