--- a/packages/cmdr/templates/microservice-template/tsconfig.json
+++ b/packages/cmdr/templates/microservice-template/tsconfig.json
@@ -1,5 +1,5 @@
+// @ts-nocheck
 {
-  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
