--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,8 @@
     "**/LICENSE": true,
     "**/nginx": true,
     // "**/nodemon.json": true,
-    "**/README.md": true
+    "**/README.md": true,
+    // "**/cmdr": true,
   },
 
   // Wyłączenie zawijania linii w edytorze
