--- a/apps/gateway/tsconfig.build.json
+++ b/apps/gateway/tsconfig.build.json
@@ -3,7 +3,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "dist",
+    "outDir": "./dist",
     "noEmit": false,
     "declaration": false,
     "allowImportingTsExtensions": false,
