--- a/services/auth-service/tsconfig.build.json
+++ b/services/auth-service/tsconfig.build.json
@@ -2,8 +2,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "dist",
+    "rootDir": ".",
+    "outDir": "./dist",
     "noEmit": false,
     "declaration": false,
     "allowImportingTsExtensions": false,
