--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,5 +1,13 @@
 // tsconfig.base.json
 {
+  "files": [],
+  "references": [
+    { "path": "./apps/gateway" },
+    { "path": "./apps/web" },
+    { "path": "./packages/common" },
+    { "path": "./packages/ui" },
+    { "path": "./services/auth-services" }
+  ],
   "compilerOptions": {
     "target": "ES2024",
     "module": "NodeNext",
@@ -11,6 +19,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": false,
+    "disableReferencedProjectLoad": true    
   },
   "include": [
     "packages/*/src/**/*",
